Fix chess animation: remove from-square highlight and fix piece visibility

--- a/src/app/component/chess/chess.component.scss
+++ b/src/app/component/chess/chess.component.scss
@@ -63,10 +63,6 @@
       animation-timing-function: ease-in-out;
     }
 
-    &.hide-for-move {
-      opacity: 0;
-    }
-
     &.capture-animation {
       position: absolute;
       animation-duration: 1.5s;
